# mars

./: .bashrc_youbot1  .gitignore  .gitmodules  README.md  aspire2_env_loader.sh  frames.dot  mars.code-workspace  rosgraph.dot  youbot2_env_loader.sh
src/mars_controller/: CMakeLists.txt  package.xml
src/mars_controller/include/mars_controller/: controlsysservice.h  mainlogic.h  modelconfig.h  modelworker.h  qnode.h
src/mars_controller/launch/: start_model.launch
src/mars_controller/src/: controlsysservice.cpp  main.cpp  mainlogic.cpp  modelconfig.cpp  modelworker.cpp  qnode.cpp
src/sgur_control/: CMakeLists.txt  package.xml
src/sgur_control/launch/: sgur.launch
src/sgur_control/scripts/: run.py  run_by_speed.py  run_refactored.py
src/youbot_launcher/: CMakeLists.txt  package.xml
src/youbot_launcher/bags/: 025.bag  050.bag  065.bag  100.bag
src/youbot_launcher/bags/fullout/: 025.bag  050.bag  065.bag  080.bag  rqt_multiplot 080.txt
src/youbot_launcher/bags/fullout_with_accel/: 080_001.bag  080_010.bag  080_030.bag  080_065.bag  080_100.bag
src/youbot_launcher/config/: rqt_multiplot.xml  youbot.rviz  youbot_sim_controllers.yaml
src/youbot_launcher/launch/: run.launch  run_detector.launch  spawn.launch  test.launch
src/youbot_launcher/msg/: FrictionJointState.msg
src/youbot_launcher/scripts/: dance_by_step.py  mu_detector.py  record_test_process.py  simple_detector.py  slippage_detector.py  start_one_wheel.py  timed_roslaunch.sh  timed_rosrun.sh
src/youbot_launcher/worlds/: willow_garage.world  willow_garage_dart.world
src/youbot_localization/: CMakeLists.txt  package.xml
src/youbot_localization/config/: ids_xs_camera_L.ini  ids_xs_camera_R.yaml  localization.rviz
src/youbot_localization/config/apriltags/: settings.yaml  tags.yaml
src/youbot_localization/config/calibrate/: axis_camera_calib.yaml  camera_calib(endoscope).yaml  genius_calib.yaml  ids_stereo_calib.txt  ids_xs_camera_L.yaml  ids_xs_camera_R.yaml  self_camera_calib.yaml
src/youbot_localization/config/ekf/: localization.yaml
src/youbot_localization/launch/: apriltags_localization.launch  aruco_localization.launch  axis_init.launch  calib.launch  ids_init.launch  init_cam_from_rosbag.launch  remote_localization.launch  uvc_init.launch  youbot_localization.launch
src/youbot_localization/scripts/: youbot_dance.py
src/youbot_localization/src/: projection_on_map_node.cpp  tags_tf_to_robot_pos_node.cpp
