<?xml version="1.0"?>
<package format="2">
  <name>mars_controller</name>
  <version>0.0.1</version>
  <description>The mars_controller package</description>

  <maintainer email="mail@borislap.ru">Lapin Boris S.</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>qt_build</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>qt_build</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
